<resources>
    <string name="app_name">Menulis Aksara Jawa</string>
    <string name="aksara_jawa">
        <p>Aksara Jawa merupakan salah satu aksara tradisional Nusantara yang berkembang di pulau Jawa. Bentuk modern dari Aksara Jawa yang kini dikenal sudah muncul berangsur-angsur dari Aksara Kaawi setidaknya dari 16M(Aditya Bayu Perdana, 2020).</p><br />
        <p>Sejarah dari Aksara Jawa yaitu berawal dari seorang laki-laki bernama Prabu Aji Saka yang saat ini dikenal luas sebagai pencipta Aksara Jawa. Aksara Jawa ini dibuat dengan tujuan untuk mengenang 2 abdi setianya, yaitu Abdi Sembada dan Abdi Dora(Feny Andiani,2018).</p>
    </string>
    <string name="aksara_angka">
        <p>Aksara Angka adalah sebuah aksara yang digunakan untuk kebutuhan penulisan angka.</p>
    </string>
    <string name="aksara_carakan">
        <p>Aksara Carakan adalah aksara asli yang belum diberi sandangan. Jumlah dari Aksara Carakan adalah 20 aksara.</p>
    </string>
    <string name="aksara_pasangan">
        <p>Aksara Pasangan digunakan untuk merangkai Aksara Carakan menjadi aksara mati.</p>
    </string>
    <string name="aksara_swara">
        <p>Aksara Swara bertujuan untuk menciptakan huruf vokal untuk memudahkan orang membaca buku yang ditulis dari kata serapan dalam bahasa asing.</p>
    </string>
    <string name="menu_materi">
        <p>Menu Materi adalah menu yang di dalamnya terdapat materi-materi mengenai pengertian dan sejarah Aksara Jawa, pengertian dan contoh dari Aksara Carakan, Aksara Pasangan, Aksara Swara dan Aksara Angka.</p>
    </string>
    <string name="menu_belajar">
        <p>Menu Belajar adalah menu yang di dalamnya terdapat daftar Aksara Jawa, kemudian dapat digunakan untuk belajar menulis Aksara Jawa dengan mengikuti panduan dari gambar animasi yang ditampilkan.</p>
    </string>
    <string name="menu_latihan">
        <p>Menu Latihan adalah menu yang dapat digunakan untuk melakukan latihan menulis Aksara Jawa dan menghasilkan nilai yang dapat dilihat di Menu Nilai.</p>
    </string>
    <string name="menu_nilai">
        <p>Menu Nilai adalah menu yang dapat digunakan untuk melihat nilai setelah mengerjakan latihan menulis Aksara Jawa.</p>
    </string>
    <string name="menu_info">
        <p>Pada Menu Bantuan terdapat penjelasan singkat mengenai fungsi dari masing-masing menu yang ada pada halaman utama. Pada Menu Info terdapat informasi tentang Aplikasi Belajar Menulis Aksara Jawa.</p>
    </string>
    <string name="info_app">
        <p>Aplikasi Belajar Menulis Aksara Jawa ini dibuat untuk siswa/siswi dapat mengetahui tata cara penulisan Aksara Jawa yang merupakan salah satu kebudayaan dari Indonesia. Aplikasi ini berisi mengenai materi dari Aksara Jawa.</p>
    </string>
    <string name="title_activity_info">InfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string-array name="daftar_kelas">
        <item>Pilih Kelas</item>
        <item>VII A</item>
        <item>VII B</item>
        <item>VII C</item>
        <item>VII D</item>
        <item>VII E</item>
        <item>VII F</item>
    </string-array>
    <string name="title_activity_basic">BasicActivity</string>
</resources>