<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.siswa.TheoryActivity">

    <TextView
        android:id="@+id/tv_theory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aksara Jawa"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_theory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aksara_jawa"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theory_title" />
    <TextView
        android:id="@+id/tv_angka_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aksara Angka"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theory" />
    <TextView
        android:id="@+id/tv_angka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aksara_angka"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_angka_title" />
    <TextView
        android:id="@+id/tv_carakan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aksara Carakan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_angka" />
    <TextView
        android:id="@+id/tv_carakan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aksara_carakan"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_carakan_title" />
    <TextView
        android:id="@+id/tv_pasangan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aksara Pasangan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_carakan" />
    <TextView
        android:id="@+id/tv_pasangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aksara_pasangan"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pasangan_title" />
    <TextView
        android:id="@+id/tv_swara_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aksara Swara"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pasangan" />
    <TextView
        android:id="@+id/tv_swara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aksara_swara"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_swara_title" />
</androidx.constraintlayout.widget.ConstraintLayout>