<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.GuideActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mega_mendung"
            app:title="Informasi Aplikasi"
            app:theme="@style/Theme.MaterialComponents.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <ImageView
            android:id="@+id/bg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:rotationY="180"
            android:src="@drawable/bg_toolbar"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_title_bantuan"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_stample"
            android:text="Bantuan"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingStart="42dp"
            app:layout_constraintTop_toBottomOf="@id/bg_toolbar"
            app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
            android:id="@+id/bg_materi"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:background="@drawable/bg_notes_mega"
            android:padding="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_bantuan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/tv_materi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_materi"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:justificationMode="inter_word"
                android:paddingTop="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:id="@+id/tv_carakan_title"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:text="Aksara Carakan"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@id/tv_materi"
                android:background="@drawable/bg_stample"
                android:paddingTop="2dp"
                android:paddingStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:id="@+id/tv_carakan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_materi"
                android:layout_toEndOf="@id/tv_carakan_title"
                android:text="Tombol untuk menampilkan daftar Aksara Carakan"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/tv_pasangan_title"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:text="Aksara Pasangan"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@id/tv_carakan"
                android:background="@drawable/bg_stample"
                android:paddingTop="2dp"
                android:paddingStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:id="@+id/tv_pasangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_carakan"
                android:layout_toEndOf="@id/tv_pasangan_title"
                android:text="Tombol untuk menampilkan daftar Aksara Pasangan"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/tv_swara_title"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:text="Aksara Swara"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@id/tv_pasangan"
                android:background="@drawable/bg_stample"
                android:paddingTop="2dp"
                android:paddingStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:id="@+id/tv_swara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pasangan"
                android:layout_toEndOf="@id/tv_swara_title"
                android:text="Tombol untuk menampilkan daftar Aksara Swara"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/tv_angka_title"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:text="Aksara Angka"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@id/tv_swara"
                android:background="@drawable/bg_stample"
                android:paddingTop="2dp"
                android:paddingStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:id="@+id/tv_angka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_swara"
                android:layout_toEndOf="@id/tv_angka_title"
                android:text="Tombol untuk menampilkan daftar Aksara Angka"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_belajar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:text="@string/menu_belajar"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:background="@drawable/bg_notes_mega"
            android:paddingTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bg_materi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_latihan"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/menu_latihan"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:background="@drawable/bg_notes_mega"
            android:paddingTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_belajar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_nilai"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/menu_nilai"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:background="@drawable/bg_notes_mega"
            android:paddingTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_latihan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_title_info"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_stample"
            android:text="Tentang"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingStart="42dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_nilai"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_info_app"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:text="@string/info_app"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:background="@drawable/bg_notes_mega"
            android:paddingTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:justificationMode="inter_word"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:background="@drawable/rounded_button"
            android:drawableEnd="@drawable/ic_logout"
            android:textColor="@color/white"
            android:text="Logout"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>